# generic-recursion-schemes

./: .travis.yml  README.md  generic-recursion-schemes.cabal  recursion-schemes-generic.cabal
.github/workflows/: haskell-ci.yml
src/Data/Functor/Foldable/: Generic.hs
src/Generic/: RecursionSchemes.hs
src/Generic/RecursionSchemes/: Internal.hs  Labels.hs
src/Generic/RecursionSchemes/Internal/: Generic.hs  Labels.hs  Sum.hs  TyFun.hs  Vinyl.hs
test/: example.hs  expr.hs  list.hs  patterns.hs  prop.hs  unittest.hs
