name:                generic-recursion-schemes
version:             0.1.0.0
synopsis:            Folds on recursive structures with GHC Generics
description:

  Derive <https://hackage.haskell.org/package/recursion-schemes recursion-schemes>
  folds with GHC Generics.

homepage:            https://github.com/Lysxia/generic-recursion-schemes#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.RecursionSchemes
    Generic.RecursionSchemes.Internal.Generic
    Generic.RecursionSchemes.Internal.Sum
    Generic.RecursionSchemes.Internal.TyFun
    Generic.RecursionSchemes.Internal.Vinyl
  build-depends:
    vinyl,
    base >= 4.9 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010


test-suite list-test
  hs-source-dirs: test
  main-is: list.hs
  build-depends:
    generic-recursion-schemes,
    inspection-testing,
    vinyl,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

test-suite patterns-test
  hs-source-dirs: test
  main-is: patterns.hs
  build-depends:
    generic-recursion-schemes,
    inspection-testing,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0


source-repository head
  type:     git
  location: https://github.com/Lysxia/generic-recursion-schemes
